added sending verification email functionality

--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 PAYLOAD_SECRET = lxsh
 MONGODB_URL = mongodb://0.0.0.0:27017/database
 NEXT_PUBLIC_SERVER_URL = http://localhost:3000
+
+RESEND_API = re_URtExq9d_34hTfmuhZ67mVsNAEohyzknP
