--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@hookform/resolvers": "^3.3.4",
     "@payloadcms/bundler-webpack": "^1.0.6",
     "@payloadcms/db-mongodb": "^1.5.1",
-    "@payloadcms/richtext-slate": "^1.5.2", 
+    "@payloadcms/richtext-slate": "^1.5.2",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-separator": "^1.0.3",
@@ -24,6 +24,7 @@
     "@trpc/react-query": "^10.45.2",
     "@trpc/server": "^10.45.2",
     "@types/express": "^4.17.21",
+    "@types/nodemailer": "^6.4.15",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cross-env": "^7.0.3",
@@ -31,6 +32,7 @@
     "express": "^4.19.2",
     "lucide-react": "^0.378.0",
     "next": "14.2.3",
+    "nodemailer": "^6.9.14",
     "payload": "^2.16.1",
     "react": "^18",
     "react-dom": "^18",
