--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.51.4",
     "sonner": "^1.4.41",
+    "stripe": "^16.2.0",
     "swiper": "^11.1.4",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
