completed the production build

--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -2,7 +2,7 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "module": "CommonJS",
-    "outDir": "dis",
+    "outDir": "dist",
     "noEmit": false,
     "jsx": "react"
   },
