--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "clsx": "^2.1.1",
+    "framer-motion": "^11.2.13",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
+    "simplex-noise": "^4.0.1",
     "tailwind-merge": "^2.4.0"
   },
   "devDependencies": {
