--- a/package.json
+++ b/package.json
@@ -3,18 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "cross-env PAYLOAD_CONFIG_PATH=src/payload.config.ts nodemon",
+    "generate:types": "cross-env PAYLOAD_CONFIG_PATH=src/payload.config.ts payload generate:types",
     "build": "next build",
-    "start": "next start",
+    "start": "cross-env PAYLOAD_CONFIG_PATH=dist/payload.config.js NODE_ENV=production node dist/server.js",
     "lint": "next lint"
   },
   "dependencies": {
+    "@payloadcms/bundler-webpack": "^1.0.7",
+    "@payloadcms/db-mongodb": "^1.5.2",
+    "@payloadcms/richtext-slate": "^1.5.2",
     "@radix-ui/react-slot": "^1.1.0",
+    "@types/express": "^4.17.21",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cross-env": "^7.0.3",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "framer-motion": "^11.2.13",
     "lucide-react": "^0.403.0",
     "next": "14.2.4",
+    "nodemon": "^3.1.4",
+    "payload": "^2.23.1",
     "react": "^18",
     "react-dom": "^18",
     "simplex-noise": "^4.0.1",
