--- a/package.json
+++ b/package.json
@@ -14,6 +14,11 @@
     "@payloadcms/db-mongodb": "^1.5.2",
     "@payloadcms/richtext-slate": "^1.5.2",
     "@radix-ui/react-slot": "^1.1.0",
+    "@tanstack/react-query": "^4.36.1",
+    "@trpc/client": "^10.45.2",
+    "@trpc/next": "^10.45.2",
+    "@trpc/react-query": "^10.45.2",
+    "@trpc/server": "^10.45.2",
     "@types/express": "^4.17.21",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
