--- a/package.json
+++ b/package.json
@@ -28,13 +28,15 @@
     "framer-motion": "^11.2.13",
     "lucide-react": "^0.403.0",
     "next": "14.2.4",
+    "nodemailer": "^6.9.14",
     "nodemon": "^3.1.4",
     "payload": "^2.23.1",
     "react": "^18",
     "react-dom": "^18",
     "simplex-noise": "^4.0.1",
     "tailwind-merge": "^2.4.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
