--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@trpc/react-query": "^10.45.2",
     "@trpc/server": "^10.45.2",
     "@types/express": "^4.17.21",
+    "@types/nodemailer": "^6.4.15",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cross-env": "^7.0.3",
@@ -33,10 +34,14 @@
     "payload": "^2.23.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-toastify": "^10.0.5",
     "simplex-noise": "^4.0.1",
+    "sonner": "^1.5.0",
+    "stripe": "^16.2.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "zustand": "^4.5.4"
   },
   "devDependencies": {
     "@types/node": "^20",
