--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@hookform/resolvers": "^3.9.0",
-    "@payloadcms/bundler-webpack": "^1.0.7",
-    "@payloadcms/db-mongodb": "^1.5.2",
+    "@hookform/resolvers": "^3.3.4",
+    "@payloadcms/bundler-webpack": "^1.0.6",
+    "@payloadcms/db-mongodb": "^1.5.1",
     "@payloadcms/richtext-slate": "^1.5.2",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
@@ -29,10 +29,12 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "framer-motion": "^11.2.13",
+    "install": "^0.13.0",
     "lucide-react": "^0.403.0",
     "next": "14.2.4",
     "nodemailer": "^6.9.14",
     "nodemon": "^3.1.4",
+    "npm": "^10.8.2",
     "payload": "^2.23.1",
     "react": "^18",
     "react-dom": "^18",
