--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
     "@payloadcms/bundler-webpack": "^1.0.6",
     "@payloadcms/db-mongodb": "^1.5.1",
     "@payloadcms/richtext-slate": "^1.5.2",
+    "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-scroll-area": "^1.1.0",
+    "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@tanstack/react-query": "^4.36.1",
     "@trpc/client": "^10.45.2",
@@ -39,10 +43,12 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
+    "react-loader-spinner": "^6.1.6",
     "react-toastify": "^10.0.5",
     "simplex-noise": "^4.0.1",
     "sonner": "^1.5.0",
     "stripe": "^16.2.0",
+    "swiper": "^11.1.4",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8",
